src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__sql_modal_plan_tab_placeholder.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                                                                                                                  
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────────────────────────────────────────────────────────────────────────╮               │
│                │  Press Ctrl+E to run EXPLAIN                                                                                                     │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │───────────────┘
│                │                                                                                                                                  │───────────────┐
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │               │
│                │  [NORMAL]                                                                                                                 Ready  │               │
│                ╰ y: Yank │ Tab/⇧Tab: Switch │ Esc/q: Close ───────────────────────────────────────────────────────────────────────────────────────╯               │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
